# guion

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  RELEASES.md  env.drawio  focus_handler.md  guion.code-workspace
src/: aliases.rs  backend.rs  dispatchor.rs  env.rs  error.rs  lib.rs  root.rs
src/cachialize/: cache.rs  ctx.rs  mod.rs
src/cachor/: cachor_or.rs  direct.rs  imp.rs  incrementation.rs  mod.rs  mut_cell.rs  ptr_eq.rs  to_owned.rs
src/compat/: crossbeam.rs  mod.rs
src/core/: aliases.rs  backend.rs  elem.rs  env.rs  event.rs  fns.rs  mod.rs  props.rs
src/ctx/: clipboard.rs  mod.rs  queue.rs
src/event/: compound.rs  dyn_evt.rs  filter.rs  imp.rs  key.rs  key_combo.rs  mod.rs  routing.rs  variant.rs  variants.rs
src/event_new/: downcast_map.rs  filter.rs  mod.rs  variants.rs
src/handler/: mod.rs
src/id/: mod.rs  standard.rs
src/intercept/: mod.rs
src/invalidation/: mod.rs
src/layout/: calc.rs  mod.rs  size.rs  weight.rs
src/log/: mod.rs
src/newpath/: mod.rs
src/old_view/: mod.rs  mut_target.rs  mutor_trait.rs  view_widget.rs
src/panel/: generic.rs  imp.rs  mod.rs  util.rs
src/path/: mod.rs  standard.rs  sub.rs
src/pathslice/: mod.rs
src/queron/: dyn_tunnel.rs  imp.rs  mod.rs  query.rs
src/render/: link.rs  mod.rs  widgets.rs
src/render_old/: mod.rs
src/standard/: conf.rs  mod.rs
src/state/: dyn_state.rs  handler.rs  mod.rs
src/style/: color.rs  font.rs  mod.rs
src/style_new/: mod.rs
src/text/: cursel.rs  layout.rs  mod.rs  stor.rs  update.rs
src/traitcast/: handler.rs  mod.rs  widget.rs
src/util/: as_any.rs  border.rs  bounded_widget.rs  bounds.rs  error.rs  immu.rs  mapped.rs  mod.rs  shortlt.rs  sma.rs  tabulate.rs  (+2 more)
(+275 files in other folders)
