[package]
name = "guion"
version = "0.2.0-dev3"

authors = ["qwertz19281 <dellen903@gmail.com>"]
edition = "2018"

description = "flexible GUI framework"
categories = ["gui"]
keywords = ["gui","ui"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/ferionve/guion"
readme = "README.md"

[dependencies]
qwutils = { version = "0.2.0", git = "https://github.com/qwertz19281/rust_utils", rev = "ffb307c0a5a293aac82250cdd0f3510655e0e07d" }
#qwutils = { path = "../qwutils" }

[profile.release]
codegen-units = 1

