[package]
name = "guion"
version = "0.3.0"

authors = ["qwertz19281 <dellen903@gmail.com>"]
edition = "2018"

description = "flexible GUI framework"
categories = ["gui"]
keywords = ["gui","ui"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/ferionve/guion"
readme = "README.md"

[dependencies]
qwutils = { version = "0.3.0", git = "https://github.com/qwertz19281/rust_utils", rev = "7959b3c0134fa864c1fd50adbeb063cbfe28e092" }
#qwutils = { path = "../qwutils" }

[profile.release]
codegen-units = 1

