[package]
name = "guion"
version = "0.3.0"

authors = ["qwertz19281 <dellen903@gmail.com>"]
edition = "2018"

description = "flexible GUI framework"
categories = ["gui"]
keywords = ["gui","ui"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/ferionve/guion"
readme = "README.md"

[dependencies]
qwutils = "0.3"
#qwutils = { version = "0.3.1", git = "https://github.com/qwertz19281/rust_utils", rev = "833f581b5e63117fb87a7dad9f41a6532113fd88" }
#qwutils = { path = "../qwutils" }

[profile.release]
codegen-units = 1

